--- a/src/app/components/search-medicine/search-medicine.component.css
+++ b/src/app/components/search-medicine/search-medicine.component.css
@@ -108,8 +108,33 @@
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     }
 
+    .div-style1 {
+      /* margin-left: 110px;
+      margin-top: -20px; */
+      border-radius:50px;
+      background-color: red;
+      width: 15px;
+      height: 15px;
+    }
 
 
+    .div-style2 {
+      /* margin-left: 110px;
+      margin-top: -20px; */
+      border-radius:50px;
+      background-color: green;
+      width: 15px;
+      height: 15px;
+    }
+
+    .div-style3 {
+      /* margin-left: 110px;
+      margin-top: -20px; */
+      border-radius:50px;
+      background-color:orange ;
+      width: 15px;
+      height: 15px;
+    }
 
 
 
