--- a/src/app/components/hand-writ-medicine/hand-writ-medicine.component.html
+++ b/src/app/components/hand-writ-medicine/hand-writ-medicine.component.html
@@ -30,7 +30,7 @@
         </div><br>
 
         <div style=" font-family: 'Calibri';margin-left:135px;" class="form__group field">
-            <input style=" font-family: 'Calibri';width: 250px ; text-align: right;"   formControlName="date" type="text" class="form__field" placeholder="תאריך התחלה" name="data" id='date' required />
+            <input style=" font-family: 'Calibri';width: 250px ; text-align: right;"   formControlName="date" type="date" class="form__field" placeholder="תאריך התחלה" name="data" id='date' required />
             <label style=" font-family: 'Calibri';color: white; margin-left: 160px;" for="date" class="form__label">תאריך התחלה</label>
         </div><br>
 
