--- a/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
+++ b/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
@@ -19,13 +19,13 @@
             <label style="color: white; margin-left: 180px;  " for="reminderName" class="form__label">שם תזכורת</label>
         </div><br> <br> <br> <br>
         
-        
+        <!-- [value]="MedicineService.alarmForm.get(alarm).value | date:'HH:mm'"  -->
           <!-- ליצור פור שלפי התדירות ביום יפתח ההתראות -->
         <div *ngFor="let date of remideserve.alarmListDate ; let i=index  "style="margin-left:135px;" class="form__group field">
-            <input style="width: 250px; text-align: right;" formControlName="alarm{{i}}" type="text" class="form__field" placeholder="התראה" name="Alarm‏" id='alarm‏' required />
+            <input style="width: 250px; text-align: right;" [value]="date |date:'HH:mm'"  type="text" class="form__field" placeholder="התראה" name="Alarm‏" id='alarm‏' required />
             <label style="color: white; margin-left: 190px;"  class="form__label">{{i+1}} התראה</label>
         </div><br>
-        <!-- formControlName="alarm{{i}}|date:'HH:mm'" -->
+        <!-- formControlName="alarm{{i}}" -->
         <div style="margin-top: 170px; margin-left: 140px; color: white;  font-size: 17px;  font-family: 'Calibri';">חזור
             <span style=" margin-left: 75px; color: white; font-size: 25px;" class="glyphicon glyphicon-ok"(click)="ok()"></span> 
             <span style="margin-left: 85px; color: white; font-size: 20px;" class="glyphicon glyphicon-trash" ></span>
