--- a/src/app/components/details-medicine-take/details-medicine-take.component.html
+++ b/src/app/components/details-medicine-take/details-medicine-take.component.html
@@ -4,7 +4,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   
-<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
+<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user" routerLink="/scannePage" ></span> ‏
+<div style="color: white;text-align: center; font-size:30px;  font-family: 'Calibri';" >פירוט ללקיחת התרופה</div>
 
 
 <form  [formGroup]="myForm" style="  width: 300px; " class="example-button-row" >
