--- a/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
+++ b/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
@@ -8,7 +8,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
+<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user" routerLink="/scannePage" ></span> ‏
 
 <form [formGroup]="MedicineService.alarmForm">
 <div  style="width: 300px;  "class="example-button-row" >
@@ -26,7 +26,7 @@
             <label style="color: white; margin-left: 190px;"  class="form__label">{{i+1}} התראה</label>
         </div><br>
         <!-- formControlName="alarm{{i}}|date:'HH:mm'" -->
-        <div style="margin-top: 170px; margin-left: 140px; color: white;  font-size: 17px;  font-family: 'Calibri';">חזור
+        <div style="margin-top: 170px; margin-left: 140px; color: white;  font-size: 17px;  font-family: 'Calibri';"  routerLink="/handWritMedicine"  >חזור
             <span style=" margin-left: 75px; color: white; font-size: 25px;" class="glyphicon glyphicon-ok"(click)="ok()"></span> 
             <span style="margin-left: 85px; color: white; font-size: 20px;" class="glyphicon glyphicon-trash" ></span>
             <!-- (click)="delete()" -->
