--- a/src/app/components/activity-reminders/activity-reminders.component.html
+++ b/src/app/components/activity-reminders/activity-reminders.component.html
@@ -10,18 +10,18 @@
   
 
 
-<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> 
+<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user" routerLink="/scannePage" ></span> 
 <br><br><br><br><br><br>
-<div style="color: white;text-align: center; font-size:50px;  font-family: 'Calibri';" >תיזכורות פעילות</div>
+<div style="color: white;text-align: center; font-size:30px;  font-family: 'Calibri';" >תיזכורות פעילות</div>
 <div style=" width: 300px; ">
   <div style=" font-family: 'Calibri'; width:550px; margin-left: 500px; margin-top:100px ;"> 
     <body>
     <section>
       <div class="tbl-header">
-        <table style=" font-size: 50px;" cellpadding="0" cellspacing="0" >
+        <table style=" font-size: 50px;font-family: 'Calibri';" cellpadding="0" cellspacing="0" >
           <thead>
             <tr>
-              <th>פירוט</th>
+              <th >פירוט</th>
               <th>עריכה/עצירה</th>
               <!-- <th>עריכה</th> -->
               <th>ימים שנותרו</th>
@@ -36,13 +36,13 @@
           <tbody>
             <tr>
               <td>1</td>
-              <td>
+              <td style=" font-family: 'Calibri';">
                 <span  style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop"></span>
                 <span style=" font-family: 'Calibri';font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
               </td>
-              <td>2</td>
-              <td>16:15</td>
-              <td>Acamol</td>
+              <td style=" font-family: 'Calibri';">2</td>
+              <td style=" font-family: 'Calibri';">16:15</td>
+              <td style=" font-family: 'Calibri';">Acamol</td>
             </tr>
             <tr>
               <td>2</td>
