--- a/src/app/components/scanne-page/scanne-page.component.html
+++ b/src/app/components/scanne-page/scanne-page.component.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   
-<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
+<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user" routerLink="/scannePage" ></span> ‏
 
 
 <div style="margin-top: 190px; margin-left: 715px; font-size:15px;  font-family: 'Calibri';; font-size: 35px; color: white;"> היי {{this.userserve.currentuser.fname}}</div>
