--- a/src/app/components/activity-reminders/activity-reminders.component.html
+++ b/src/app/components/activity-reminders/activity-reminders.component.html
@@ -34,7 +34,17 @@
       <div class="tbl-content">
         <table cellpadding="0" cellspacing="0">
           <tbody>
-            <tr>
+            <tr *ngFor="let activeReminder of ListActivityReminders">
+              <td (click)="showDetails(activeReminder)">1</td>
+              <td>
+                <span  style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop"></span>
+                <span style=" font-family: 'Calibri';font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
+              </td>
+              <td>{{activeReminder.LeftDays}}</td>
+              <td>{{getNextTime()}}</td>
+              <td>{{activeReminder.MedicineName}}</td>
+            </tr>
+            <!-- <tr>
               <td>1</td>
               <td>
                 <span  style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop"></span>
@@ -43,8 +53,8 @@
               <td>2</td>
               <td>16:15</td>
               <td>Acamol</td>
-            </tr>
-            <tr>
+            </tr> -->
+            <!-- <tr>
               <td>2</td>
               <td>
                 <span style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop"></span>
@@ -63,7 +73,7 @@
               <td>2</td>
               <td>16:45</td>
               <td>Acamol</td>
-            </tr>
+            </tr> -->
           
           
           </tbody>
