--- a/src/app/components/activity-reminders/activity-reminders.component.html
+++ b/src/app/components/activity-reminders/activity-reminders.component.html
@@ -35,13 +35,13 @@
         <table cellpadding="0" cellspacing="0">
           <tbody>
             <tr *ngFor="let activeReminder of ListActivityReminders">
-              <td (click)="showDetails(activeReminder)">1</td>
+              <td (click)="showDetails(activeReminder)">לחץ</td>
               <td>
                 <span  style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop"></span>
                 <span style=" font-family: 'Calibri';font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
               </td>
               <td>{{activeReminder.LeftDays}}</td>
-              <td>{{getNextTime()}}</td>
+              <td>{{getNextTime(activeReminder) | date:'HH:mm'}}</td>
               <td>{{activeReminder.MedicineName}}</td>
             </tr>
             <!-- <tr>
