--- a/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
+++ b/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
@@ -21,8 +21,9 @@
         
         <!-- [value]="MedicineService.alarmForm.get(alarm).value | date:'HH:mm'"  -->
           <!-- ליצור פור שלפי התדירות ביום יפתח ההתראות -->
-        <div *ngFor="let date of remideserve.alarmListDate ; let i=index  "style="margin-left:135px;" class="form__group field">
-            <input style="width: 250px; text-align: right;" [value]="date |date:'HH:mm'"  type="text" class="form__field" placeholder="התראה" name="Alarm‏" id='alarm‏' required />
+          
+        <div *ngFor="let myDate of remideserve.alarmListDate ; let i=index  "style="margin-left:135px;" class="form__group field">
+            <input style="width: 250px; text-align: right;"  formControlName="alarm{{i}}"  type="text" class="form__field" placeholder="התראה" name="Alarm‏" id='alarm‏' required />
             <label style="color: white; margin-left: 190px;"  class="form__label">{{i+1}} התראה</label>
         </div><br>
         <!-- formControlName="alarm{{i}}|date:'HH:mm'" -->
