--- a/src/app/components/details-medicine-take/details-medicine-take.component.html
+++ b/src/app/components/details-medicine-take/details-medicine-take.component.html
@@ -21,7 +21,7 @@
         </div><br>
 
         <div style="margin-left:135px;" class="form__group field">
-            <input style="width: 250px; text-align: right;" formControlName="frequency" type="text" class="form__field" placeholder=" מספר פעמים ביום" name="Frequency‏" id='frequency‏' required />
+            <input style="width: 250px; text-align: right;" formControlName="frequency" type="text" class="form__field" placeholder=" מספר פעמים ביום" name="Frequency" id='frequency' required />
             <label style="color: white; margin-left: 138px;  " for="frequency" class="form__label">מספר פעמים ביום</label>
         </div><br>
 
