--- a/src/app/components/hand-writ-medicine/hand-writ-medicine.component.html
+++ b/src/app/components/hand-writ-medicine/hand-writ-medicine.component.html
@@ -60,11 +60,11 @@
             <input (blur)="updetexpirydate()" style=" font-family: 'Calibri';width: 250px ; text-align: right;" type="date" class="form__field" placeholder=" תאריך תפוגה" formControlName="endDate" name="EndDate" id='endDate' required />
             <label style=" font-family: 'Calibri';color: white; margin-left: 165px;" for="enddate" class="form__label">תאריך תפוגה</label>
         </div><br>
-
+       <!-- 
         <div style=" font-family: 'Calibri';margin-left:150px;" class="form__group field">
             <label style=" font-family: 'Calibri';color: white; font-size: 15px;   font-family: 'Calibri';;"> האם התרופה תסתיים בתום השימוש</label>
             
-        </div>  
+        </div>   -->
 
     </div>
 </form>
