מחיקת תזכורת, עיצוב כפתור שעות תזכורת והצגת מספר תזכורות פעילות בדף הראשי

--- a/src/app/components/hand-writ-medicine/hand-writ-medicine.component.html
+++ b/src/app/components/hand-writ-medicine/hand-writ-medicine.component.html
@@ -68,8 +68,9 @@
 
     </div>
 </form>
-<!-- <button routerLink="/handWritReminderComponent" " style="margin-top: 100px; margin-left: 700px; padding: 10px 20px; border-radius: 100px; width: 150px;" type="button" class="btn">
+<button routerLink="/handWritReminderComponent" style="margin-top: 100px; margin-left: 700px; padding: 10px 20px; border-radius: 100px; width: 150px;" type="button" class="btn">
     <div style="font-size: 15px;  font-family: 'Calibri';; ">שעות התיזכורות</div>
-  </button> -->
-<input style=" font-family: 'Calibri';margin-left: auto;"  type="checkbox" class="form__field" name="Frequency" id='frequency' required /> 
- <button  routerLink="/handWritReminderComponent" >ffff</button>
+  </button>
+
+<!-- <input style=" font-family: 'Calibri';margin-left: auto;"  type="checkbox" class="form__field" name="Frequency" id='frequency' required /> 
+ <button  routerLink="/handWritReminderComponent" >ffff</button> -->
