--- a/src/app/components/scanne-page/scanne-page.component.html
+++ b/src/app/components/scanne-page/scanne-page.component.html
@@ -32,6 +32,6 @@
     
 <div (click)="myFunction()" > 
   <i class="glyphicon glyphicon-bell" style="color: white; font-size:36px; margin-left: 760px; "></i> 
-  <span   matBadge="1" matBadgeOverlap="false"  style=" margin-left: 790px;" ></span>
+  <span   matBadge="{{reminderserve.numOfReminder}}" matBadgeOverlap="false"  style=" margin-left: 790px;" ></span>
 </div><br>
    
