--- a/src/app/components/activity-reminders/activity-reminders.component.html
+++ b/src/app/components/activity-reminders/activity-reminders.component.html
@@ -37,50 +37,13 @@
             <tr *ngFor="let activeReminder of ListActivityReminders">
               <td (click)="showDetails(activeReminder)">לחץ</td>
               <td>
-                <span  style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop"></span>
+                <span  style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop" (click)="deleteReminder(activeReminder)"></span>
                 <span style=" font-family: 'Calibri';font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
               </td>
               <td>{{activeReminder.LeftDays}}</td>
               <td>{{getNextTime(activeReminder) | date:'HH:mm'}}</td>
               <td>{{activeReminder.MedicineName}}</td>
-            </tr>
-            <!-- <tr>
-              <td>1</td>
-              <td style=" font-family: 'Calibri';">
-                <span  style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop"></span>
-                <span style=" font-family: 'Calibri';font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
-              </td>
-              <td>2</td>
-              <td>16:15</td>
-              <td>Acamol</td>
-            </tr> -->
-            <!-- <tr>
-              <td style=" font-family: 'Calibri';">2</td>
-              <td style=" font-family: 'Calibri';">16:15</td>
-              <td style=" font-family: 'Calibri';">Acamol</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>
-                <span style=" font-family: 'Calibri';font-size: 20px;" class="glyphicon glyphicon-stop"></span>
-                <span style=" font-family: 'Calibri';font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
-              </td>
-              <td>5</td>
-              <td>18:00</td>
-              <td>Acamol</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>
-                <span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span>
-                <span style="font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
-              </td>
-              <td>2</td>
-              <td>16:45</td>
-              <td>Acamol</td>
-            </tr> -->
-          
-          
+            </tr>          
           </tbody>
         </table>
       </div>
