--- a/src/app/components/open-page/open-page.component.html
+++ b/src/app/components/open-page/open-page.component.html
@@ -1,1 +1,11 @@
-<div style="width: 1000;height: 700px;background-image:url('../../../assets/Pictures/open.jpg')" ></div> 
+
+<div class="body" style="margin-top: -22px;">
+  <img   src="../../../assets/Pictures/tryopen.jpg" width="1536" height="740"  alt="webmaster logo" />
+     <!-- <button style="  margin-left: 600px; padding: 10px 20px; text-align: center; border-radius: 100px; width: 350px; font-family: 'Calibri';color: rgb(235, 23, 206);font-size: 20px; background-color: white;" 
+     type="submit" "> </button> -->
+     <button routerLink="/logIn" style="position:absolute; bottom:140px;right: 650px; padding: 10px 20px;border-color: black; border-radius: 15PX; width: 300px;color:rgb(191,18,121);font-size:25px; background-color: white;" type="button" class="btn">
+      <div style="font-size:25px;font-family:'Calibri'; ">התחלת הפעילות</div>
+    </button>
+    
+     
+</div>
