--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 body{
-    background-image: url("./assets/Pictures/open.png");
+    width: 1000;
+    height: 700px;
+     background-image:url( "./assets/Pictures/pic.png");
     background-repeat: no-repeat;
-
-
-}
+    }
