--- a/src/app/components/search-medicine/search-medicine.component.html
+++ b/src/app/components/search-medicine/search-medicine.component.html
@@ -46,7 +46,7 @@
         </section>
       </body>
 
-<div >
+<div style="top: 1000px;">
     <div style="margin-left: 75px; height: 3px; width: 120px; background-color: orange;">
       <div style="margin-left: 175px; height: 3px; width: 60px; background-color: red;"></div>
       <div style="margin-left: 300px; height: 3px; width: 90px; background-color: green;"></div>
