--- a/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
+++ b/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
@@ -26,9 +26,9 @@
             <label style="color: white; margin-left: 190px;"  class="form__label">{{i+1}} התראה</label>
         </div><br>
         <!-- formControlName="alarm{{i}}|date:'HH:mm'" -->
-        <div style="margin-top: 170px; margin-left: 140px; color: white;  font-size: 17px;  font-family: 'Calibri';"  routerLink="/handWritMedicine"  >חזור
+        <div style="margin-top: 170px; margin-left: 120px; color: white;  font-size: 17px;  font-family: 'Calibri';"    >חזור לפרטי הסריקה
+            <span style=" margin-left:10px; color: white; font-size: 25px;" class="glyphicon glyphicon-arrow-right" routerLink="/handWritMedicine"></span> 
             <span style=" margin-left: 75px; color: white; font-size: 25px;" class="glyphicon glyphicon-ok"(click)="ok()"></span> 
-            <span style="margin-left: 85px; color: white; font-size: 20px;" class="glyphicon glyphicon-trash" ></span>
             <!-- (click)="delete()" -->
         </div>
        
