--- a/src/app/components/scanne-page/scanne-page.component.html
+++ b/src/app/components/scanne-page/scanne-page.component.html
@@ -19,7 +19,7 @@
       <div style="font-size: 22px;"> <span class="glyphicon glyphicon-picture" style=" font-size:26px; "> </span> קליטת חפיסה</div>
       </button><br><br> -->
 
-<button routerLink="/handWritMedicine" style=" margin-left: 650px; width: 250px;  height: 50px;  padding: 10px 20px; border-radius: 100px; background-color: white;  font-family: 'Calibri';; font-size: 12px; text-align: center;" type="button" class="btn">
+<button (click)="byhand()" style=" margin-left: 650px; width: 250px;  height: 50px;  padding: 10px 20px; border-radius: 100px; background-color: white;  font-family: 'Calibri';; font-size: 12px; text-align: center;" type="button" class="btn">
   <div style="font-size: 20px;">
    <!-- <span class="glyphicon glyphicon-pencil" style=" font-size:26px;  "></span>   -->
         קליטה ללא מרשם</div>  
